--- a/index.html
+++ b/index.html
@@ -17,25 +17,19 @@
     ::-webkit-scrollbar { display:none; }
     .scroll-container { -ms-overflow-style:none; scrollbar-width:none; }
 
-    /* Header */
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 15px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  background: rgba(255, 255, 255, 0.6); /* semi-transparent white */
-  backdrop-filter: blur(10px); /* subtle blur */
-  z-index: 100;
-  border-bottom: none; /* remove any line */
-}
-    .header-left {
-      display:flex;
-      flex-direction:column;
-      align-items:flex-start;
+    /* Header with smooth fade */
+    .header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 15px 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      background: linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(255,255,255,0));
+      z-index: 100;
     }
+    .header-left { display:flex; flex-direction:column; align-items:flex-start; }
     .header .logo {
       font-weight:bold; font-size:20px; cursor:pointer;
       text-decoration:none; color:black; margin-bottom:10px;
@@ -51,7 +45,7 @@
       display:flex; flex-direction:column; gap:40px;
       max-width:900px; scroll-behavior:smooth;
       overflow-y:auto; height:calc(100vh - 140px);
-      font-size:17px; line-height:1.5;
+      font-size:16px; line-height:1.5;
       transition: transform 0.6s ease, opacity 0.6s ease;
     }
     .scroll-container.recede { transform:scale(0.97); opacity:0.85; }
@@ -64,13 +58,17 @@
       font-weight:bold; margin-bottom:5px; max-width:80%;
     }
     .update img { max-width:80%; margin-bottom:10px; border-radius:4px; }
-    .update p { color:#333; max-width:700px; }
+    .update p {
+      color:#333;
+      max-width:80%;       /* align paragraph width with image */
+      text-align: inherit; /* inherit left/right alignment */
+    }
 
     /* Alternate alignment */
     .update:nth-child(odd) { align-items:flex-start; text-align:left; }
     .update:nth-child(even) { align-items:flex-end; text-align:right; }
 
-    /* Hyperlink global style for easier reuse */
+    /* Hyperlink global style */
     a.custom-link {
       text-decoration: underline;
       color: black;
@@ -142,7 +140,7 @@
   <div class="main-content">
     <div class="scroll-container" id="scroll-container">
 
-      <!-- Example update block with title -->
+      <!-- Example update block -->
       <div class="update">
         <div class="title">2025 &gt; Contact Mics and Preamps workshop at CAV Gallery, Bucharest</div>
         <img src="images/WORKSHOP_ATPWT_CAV.jpg">
@@ -165,7 +163,7 @@
         </p>
       </div>
 
-      <!-- Continue adding updates here -->
+      <!-- Add more updates here -->
       <!-- 
         1. Copy <div class="update"> ... </div>
         2. Add your title inside <div class="title">...</div>
