--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
     }
     a.custom-link:hover { color: rgb(182, 210, 40); }
 
+    /* iframe embed */
+.update iframe {
+  display: block;
+  max-width: 100%;
+  margin: 20px auto; /* center with spacing */
+  height: auto; /* optional if you want it to scale */
+}
     /* Menu */
     .menu {
       position:fixed; top:0; right:-25%; width:25%; height:100%;
@@ -163,6 +170,92 @@
         </p>
       </div>
 
+            <div class="update">
+        <div class="title">2025 &gt; The Main Point of the Horizon, Cultural Centre Reduta, Brasov</div>
+        <img src="images/Beyondthenoisetheconcretespeaks2.JPG">
+        <p>
+          Following its debut in the Unbound Echoes exhibition at WASP Bucharest, Beyond the Noise, the Concrete Speaks continues its journey with a second iteration in Brașov. This evolving series explores the memory of space through resonance, field recordings, and layered sonic narratives, offering a new voice to the overlooked textures of the urban environment.
+        </p>
+      </div>
+
+            <div class="update">
+        <div class="title">2025 &gt; "Unul dintre noi", Teatrul de Comedie, Bucharest</div>
+        <img src="images/UDN.jpg">
+        <p>
+          For my first theater play, Unul Dintre Noi, I got to create all the sounds and the composition — it was a really fun experience and a great way to experiment with sound in a live setting.
+        </p>
+      </div>
+
+                  <div class="update">
+        <div class="title">2024 &gt; Unbound Echoes, WASP Gallery, Bucharest</div>
+        <img src="images/BeyondBucharest.jpg">
+        <p>
+          It was a pleasure to unveil the first work in a series that explores the urban scape through sound and touch, entitled “Beyond the noise, the concrete speaks”. This first piece focusing on Bucharest.
+        </p>
+      </div>
+
+              <div class="update">
+        <div class="title">2024 &gt; Ruined Resonances, Thessaloniki, GR
+</div>
+        <img src="images/RuinedResonances_SKG.jpeg">
+        <p>
+          Ruined Resonances: Thessaloniki/GRWith the help of the Culture Moves Europe program, "Ruined Resonances" broke boundaries for the first time letting us explore and add a new set of locations to our cross-modal archive.
+        </p>
+      </div>
+
+                 <div class="update">
+        <div class="title">2024 &gt; Fusion Air, /SAC Gallery, Bucharest</div>
+        <img src="images/SOLARA1.jpeg">
+        <p>
+          During the Fusion Air Residency, I had the pleasure of collaborating with two scientists from the Institute for Space Science, Maximilian Teodorescu and Marius Echim. Our collaboration resulted in an interactive installation that explores the paradoxical relationship we have with the sun entitled Solara.
+        </p>
+      </div>
+
+                    <div class="update">
+        <div class="title">2024 &gt; E-ON at Electric Castle, Cluj
+</div>
+        <img src="images/EON1.png">
+        <p>
+          Created the sound realm for the E-On brand activation within the Electric Castle festival.
+        </p>
+      </div>
+
+                      <div class="update">
+        <div class="title">2024 &gt; Sensitive Data, Muzeul Tehnic "Dimitrie Leonida" </div>
+        <img src="images/SENSITITVE DATA1.jpg">
+        <p>
+          As part of the Sensitive Data team, I was in charge with the overall Sound Design and Interaction for “Tactile Soundscape” installation.
+
+        </p>
+      </div>
+
+                          <div class="update">
+        <div class="title">2024 &gt; Recycle your Technology, BRD Open Call
+</div>
+        <img src="images/RYT_1.jpg">
+        <p>
+          As an artist chosen by the RYT team I made an interactive installation called i:105, constructed from recycled electronic waste provided by Eco Positive Romania. I also conducted workshops in four Romanian cities (Reșița, Arad, Brașov, and Bucharest), where participants learned to create their own EMF microphones in order to capture and creatively interpret electromagnetic fields, blending environmental awareness with artistic exploration.
+        </p>
+      </div>
+
+  <div class="update">
+  <div class="title">2024 &gt; DivAirCity, Piata Italiana, Bucharest </div>
+  <img src="images/SENSITITVE DATA1.jpg" alt="DivAirCity Image">
+
+  <!-- YouTube video -->
+  <iframe width="315" height="560" 
+          src="https://www.youtube.com/embed/T5UO7QNXiLU" 
+          title="DivAirCity_PlottedGenerativeArt" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          referrerpolicy="strict-origin-when-cross-origin" 
+          allowfullscreen>
+  </iframe>
+
+  <p>
+    A quick look from the DivAirCity Day at Piațeta Italiana in Bucharest and my stand where I used air quality values to plot a series of generative drawings.
+  </p>
+</div>
       <!-- Add more updates here -->
       <!-- 
         1. Copy <div class="update"> ... </div>
