--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
 
     /* Header with smooth fade */
     .header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      padding: 15px 50px;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      background: linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(255,255,255,0));
-      z-index: 100;
-    }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 15px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  /* Gradient: solid white for the first ~60px, then fade to transparent */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 40px, rgba(255,255,255,0) 100%);
+
+  z-index: 100;
+}
     .header-left { display:flex; flex-direction:column; align-items:flex-start; }
     .header .logo {
       font-weight:bold; font-size:20px; cursor:pointer;
@@ -240,10 +243,8 @@
 
   <div class="update">
   <div class="title">2024 &gt; DivAirCity, Piata Italiana, Bucharest </div>
-  <img src="images/SENSITITVE DATA1.jpg" alt="DivAirCity Image">
-
-  <!-- YouTube video -->
-  <iframe width="315" height="560" 
+ <!-- YouTube video -->
+  <iframe width="800" height="800" 
           src="https://www.youtube.com/embed/T5UO7QNXiLU" 
           title="DivAirCity_PlottedGenerativeArt" 
           frameborder="0" 
