--- a/artworks.html
+++ b/artworks.html
@@ -7,9 +7,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Neue+Kaine:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {margin:0; padding:0; box-sizing:border-box;}
-    body {font-family:'Neue Kaine', sans-serif; background:white; overflow-x:hidden; padding-top:100px;}
+    body {font-family:'Neue Kaine', sans-serif; background:white; overflow-x:hidden;}
 
-    /* Header */
+    /* Header with fade to transparent */
     .header {
       position:fixed;
       top:0;
@@ -28,10 +28,10 @@
     /* Artworks grid */
     .artworks-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      grid-template-columns: repeat(4, 1fr);
       gap: 40px;
-      max-width:1200px;
-      margin: 0 auto;
+      max-width:1400px;
+      margin: 160px auto 80px auto; /* top spacing to move below header */
       padding: 0 20px;
     }
 
@@ -65,12 +65,13 @@
     /* Menu */
     .menu {
       position:fixed; top:0; right:-25%; width:25%; height:100%;
-      background-color:#f1f1f1; color:black; transition:right 0.4s ease; z-index:200;
+      background-color:rgb(182, 210, 40); /* green army tint like index */
+      color:black; transition:right 0.4s ease; z-index:200;
       padding:50px 20px; display:flex; flex-direction:column; gap:20px; font-size:20px;
     }
     .menu.open { right:0; }
     .menu a { color:black; text-decoration:none; transition:color 0.2s ease; }
-    .menu a:hover { color:white; }
+    .menu a:hover { color:#cd6c27; } /* brown hover */
 
     /* Grey overlay */
     .overlay {
@@ -79,9 +80,33 @@
     }
     .overlay.active { display:block; }
 
-    @media(max-width:768px){
-      .menu{ width:50%; right:-50%; }
-      .menu.open{ right:0; }
+    /* Fixed spinning logo bottom-left */
+    .atomat-fixed {
+      position:fixed;
+      bottom:20px; left:20px;
+      width:120px;
+      animation: spin 20s linear infinite;
+      z-index:100;
+      cursor:pointer;
+    }
+
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    @media(max-width:1200px){
+      .artworks-grid { grid-template-columns: repeat(3, 1fr); gap:30px; }
+    }
+
+    @media(max-width:900px){
+      .artworks-grid { grid-template-columns: repeat(2, 1fr); gap:25px; }
+    }
+
+    @media(max-width:600px){
+      .artworks-grid { grid-template-columns: 1fr; gap:20px; margin-top:140px; }
+      .header { padding:15px 20px; }
+      .atomat-fixed { width:80px; bottom:15px; left:15px; }
     }
   </style>
 </head>
@@ -99,7 +124,6 @@
 
   <!-- Artworks grid -->
   <div class="artworks-grid">
-
     <a href="artwork-1.html" class="artwork-link">
       <div class="artwork">
         <img src="images/art1.jpg" alt="Artwork 1">
@@ -121,8 +145,19 @@
       </div>
     </a>
 
+    <a href="artwork-4.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/art4.jpg" alt="Artwork 4">
+        <div class="artwork-title">Solara</div>
+      </div>
+    </a>
     <!-- Add more artworks as needed -->
   </div>
+
+  <!-- Fixed rotating image bottom-left -->
+  <a href="https://atomatlab.com" target="_blank">
+    <img src="images/atomatlab.png" alt="Atomat Lab Logo" class="atomat-fixed">
+  </a>
 
   <!-- Menu -->
   <div class="menu" id="menu">
