--- a/artworks.html
+++ b/artworks.html
@@ -124,33 +124,43 @@
 
   <!-- Artworks grid -->
   <div class="artworks-grid">
-    <a href="artwork-1.html" class="artwork-link">
+    <a href="beyondthenoisetheconcretespeaks.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/art1.jpg" alt="Artwork 1">
-        <div class="artwork-title">Beyond the Noise</div>
+        <img src="images/Beyondthenoisetheconcretespeaks2.JPG">
+        <div class="artwork-title">Beyond the noise, the concrete speaks (2024)</div>
       </div>
     </a>
 
-    <a href="artwork-2.html" class="artwork-link">
+    <a href="solara.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/art2.jpg" alt="Artwork 2">
-        <div class="artwork-title">Unbound Echoes</div>
+        <img src="images/SOLARA1.jpeg">
+        <div class="artwork-title">Solara (2024)</div>
       </div>
     </a>
 
-    <a href="artwork-3.html" class="artwork-link">
+    <a href="metabloom.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/art3.jpg" alt="Artwork 3">
-        <div class="artwork-title">DivAirCity</div>
+        <img src="images/metabloom.png">
+        <div class="artwork-title">Metabloom</div>
       </div>
     </a>
 
-    <a href="artwork-4.html" class="artwork-link">
+    <a href="auraltopographies.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/art4.jpg" alt="Artwork 4">
-        <div class="artwork-title">Solara</div>
+        <img src="images/auraltopographies.jpeg">
+        <div class="artwork-title">Aural Topographies</div>
       </div>
     </a>
+
+
+    <a href="interstatic.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/interstatic.jpg">
+        <div class="artwork-title">Interstatic</div>
+      </div>
+    </a>
+
+
     <!-- Add more artworks as needed -->
   </div>
 
