--- a/index.html
+++ b/index.html
@@ -18,20 +18,17 @@
     .scroll-container { -ms-overflow-style:none; scrollbar-width:none; }
 
     /* Header with smooth fade */
-   .header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 15px 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-
-  /* Fade from white to transparent */
-  background: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
-
-  z-index: 100;
-}
+    .header {
+      position:fixed;
+      top:0;
+      width:100%;
+      padding:25px 50px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      background: linear-gradient(to bottom, white 0%, rgba(255,255,255,0) 100%);
+      z-index:100;
+    }
     .header-left { display:flex; flex-direction:column; align-items:flex-start; }
     .header .logo {
       font-weight:bold; font-size:20px; cursor:pointer;
