--- a/artworks.html
+++ b/artworks.html
@@ -198,7 +198,9 @@
     <a href="sound.html">Sound</a>
     <a href="collabs.html">Collabs</a>
     <div style="height:20px;"></div>
-    <a href="shop.html">Shop</a>
+    <a href="https://atomatlab.com/">
+      Shop <img src="images/atomatlab.png" alt="Atomat Logo" class="menu-icon">
+    </a>
     <a href="services.html">Services</a>
     <div style="height:20px;"></div>
     <a href="biography.html">Biography</a>
