--- a/artworks.html
+++ b/artworks.html
@@ -100,6 +100,11 @@
     .menu.open { right:0; }
     .menu a { color:black; text-decoration:none; transition:color 0.2s ease; }
     .menu a:hover { color:#cd6c27; }
+    .menu-icon {
+  height:1em;
+  margin-left:5px;
+  vertical-align:middle;
+}
 
     /* Grey overlay */
     .overlay {
