--- a/artworks.html
+++ b/artworks.html
@@ -169,6 +169,14 @@
       </div>
     </a>
 
+   <a href="ruinedresonances.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/RuinedResonances_SKG.jpeg">
+        <div class="artwork-title">Ruined Resonances (2024)</div>
+      </div>
+    </a>
+  </div>
+
     <a href="metabloom.html" class="artwork-link">
       <div class="artwork">
         <img src="images/metabloom.png">
@@ -190,6 +198,16 @@
       </div>
     </a>
   </div>
+
+      <a href="particlecomposer.html" class="artwork-link">
+      <div class="artwork">
+        <img src="images/PARTICLE1.jpg">
+        <div class="artwork-title">Particle Composer (2022)</div>
+      </div>
+    </a>
+  </div>
+
+
 
   <!-- Fixed rotating image bottom-left -->
   <a href="https://atomatlab.com" target="_blank">
