--- a/artworks.html
+++ b/artworks.html
@@ -183,14 +183,14 @@
         <div class="artwork-title">Metabloom (2023)</div>
       </div>
     </a>
-
+</div>
     <a href="auraltopographies.html" class="artwork-link">
       <div class="artwork">
         <img src="images/auraltopographies.jpeg">
         <div class="artwork-title">Aural Topographies (2023)</div>
       </div>
     </a>
-
+</div>
     <a href="interstatic.html" class="artwork-link">
       <div class="artwork">
         <img src="images/interstatic.jpg">
