--- a/artworks.html
+++ b/artworks.html
@@ -101,10 +101,10 @@
     .menu a { color:black; text-decoration:none; transition:color 0.2s ease; }
     .menu a:hover { color:#cd6c27; }
     .menu-icon {
-  height:1em;
-  margin-left:5px;
-  vertical-align:middle;
-}
+      height:1em;
+      margin-left:5px;
+      vertical-align:middle;
+    }
 
     /* Grey overlay */
     .overlay {
@@ -153,61 +153,59 @@
   <!-- Overlay -->
   <div class="overlay" id="overlay"></div>
 
-  <!-- Artworks grid -->
+  <!-- Artworks grid (7 artworks) -->
   <div class="artworks-grid">
+    <!-- First row (4 artworks) -->
     <a href="beyondthenoisetheconcretespeaks.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/Beyondthenoisetheconcretespeaks2.JPG">
+        <img src="images/Beyondthenoisetheconcretespeaks2.JPG" alt="">
         <div class="artwork-title">Beyond the noise, the concrete speaks (2024)</div>
       </div>
     </a>
 
     <a href="solara.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/SOLARA1.jpeg">
+        <img src="images/SOLARA1.jpeg" alt="">
         <div class="artwork-title">Solara (2024)</div>
       </div>
     </a>
 
-   <a href="ruinedresonances.html" class="artwork-link">
+    <a href="ruinedresonances.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/RuinedResonances_SKG.jpeg">
+        <img src="images/RuinedResonances_SKG.jpeg" alt="">
         <div class="artwork-title">Ruined Resonances (2024)</div>
       </div>
     </a>
-  </div>
 
     <a href="metabloom.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/metabloom.png">
+        <img src="images/metabloom.png" alt="">
         <div class="artwork-title">Metabloom (2023)</div>
       </div>
     </a>
-</div>
+
+    <!-- Second row (3 artworks) -->
     <a href="auraltopographies.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/auraltopographies.jpeg">
+        <img src="images/auraltopographies.jpeg" alt="">
         <div class="artwork-title">Aural Topographies (2023)</div>
       </div>
     </a>
-</div>
+
     <a href="interstatic.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/interstatic.jpg">
+        <img src="images/interstatic.jpg" alt="">
         <div class="artwork-title">Interstatic (2023)</div>
       </div>
     </a>
-  </div>
 
-      <a href="particlecomposer.html" class="artwork-link">
+    <a href="particlecomposer.html" class="artwork-link">
       <div class="artwork">
-        <img src="images/PARTICLE1.jpg">
+        <img src="images/PARTICLE1.jpg" alt="">
         <div class="artwork-title">Particle Composer (2022)</div>
       </div>
     </a>
   </div>
-
-
 
   <!-- Fixed rotating image bottom-left -->
   <a href="https://atomatlab.com" target="_blank">
